--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "lodash": "^3.5.0",
     "marked": "^0.3.3",
     "md5": "^1.0.0",
+    "migrate": "^0.2.3",
     "moment": "~2.9.0",
     "mongoose": "^4.0.1",
     "mongoose-paginate": "~3.1.3",
