--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "postinstall": "./node_modules/gulp/bin/gulp.js default",
+  "postinstall": "./node_modules/gulp/bin/gulp.js styles",
   "repository": {
     "type": "git",
     "url": "git://github.com/planetarycorp/UCROS.git"
