--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "./node_modules/gulp/bin/gulp.js default",
   },
-  "postinstall": "./node_modules/gulp/bin/gulp.js styles",
   "repository": {
     "type": "git",
     "url": "git://github.com/planetarycorp/UCROS.git"
