--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "./node_modules/gulp/bin/gulp.js default"
+    "postinstall": "./node_modules/gulp/bin/gulp.js styles"
   },
   "repository": {
     "type": "git",
